--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Dashboard#index</h1>
 <p>Find me in app/views/dashboard/index.html.erb</p>
+
+<%= link_to logout_path, method: :delete, class: "contrast", data: { turbo: false } do %>
+  Logout
+<% end %>
