--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -7,6 +7,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this property", account_property_path(Current.account, @property) %> |
-  <%= link_to "Back to properties", account_properties_path(Current.account) %>
+  <%= link_to "Show this property", property_path(@property) %> |
+  <%= link_to "Back to properties", properties_path %>
 </div>
