--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -8,9 +8,9 @@
   <% @properties.each do |property| %>
     <%= render property %>
     <p>
-      <%= link_to "Show this property", account_property_path(Current.account, property) %>
+      <%= link_to "Show this property", property_path(property) %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New property", new_account_property_path(Current.account) %>
+<%= link_to "New property", new_property_path %>
