--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -7,5 +7,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to properties", account_properties_path(Current.account) %>
+  <%= link_to "Back to properties", properties_path %>
 </div>
