chore: tests fixes

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -3,6 +3,7 @@
 <%= render @property %>
 
 <div>
+  <%= link_to "Rooms", property_rooms_path(@property) %>
   <%= link_to "Edit this property", edit_property_path(@property) %> |
   <%= link_to "Back to properties", properties_path %>
 
