feat: add bookings crud

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -4,6 +4,7 @@
 
 <div>
   <%= link_to "Edit this room", edit_property_room_path(@property, @room) %> |
+  <%= link_to "Bookings", property_room_bookings_path(@property, @room) %>
   <%= link_to "Back to rooms", property_rooms_path(@property) %>
 
   <%= button_to "Destroy this room", property_room_path(@property, @room), method: :delete %>
