--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,9 +3,9 @@
 <%= render @room %>
 
 <div>
-  <%= link_to "Edit this room", edit_property_room_path(@property, @room) %> |
-  <%= link_to "Bookings", property_room_bookings_path(@property, @room) %>
-  <%= link_to "Back to rooms", property_rooms_path(@property) %>
+  <%= link_to "Edit this room", edit_property_path(@property) %> |
+  <%= link_to "Bookings", property_bookings_path(@property) %>
+  <%= link_to "Back to rooms", properties_path(@property) %>
 
-  <%= button_to "Destroy this room", property_room_path(@property, @room), method: :delete %>
+  <%= button_to "Destroy this room", property_path(@property), method: :delete %>
 </div>
