--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -7,6 +7,6 @@
 <br>
 
 <div>
-  <%= link_to "Back", property_room_bookings_path(@property, @room) %>
-  <%= link_to "Back to bookings", property_room_bookings_path(@property, @room) %>
+  <%= link_to "Back", property_bookings_path(@property) %>
+  <%= link_to "Back to bookings", property_bookings_path(@property) %>
 </div>
