--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,12 +1,4 @@
 <% content_for :title, "New booking" %>
-
-<h1>New booking</h1>
+<%= render_nav title: "Нова резервация", back_url: property_path(@property) %>
 
 <%= render "form", booking: @booking %>
-
-<br>
-
-<div>
-  <%= link_to "Back", property_bookings_path(@property) %>
-  <%= link_to "Back to bookings", property_bookings_path(@property) %>
-</div>
