--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,11 +1,4 @@
 <% content_for :title, "New property" %>
-
-<h1>New property</h1>
+<%= render_nav title: "New property", back_url: root_path %>
 
 <%= render "form", property: @property %>
-
-<br>
-
-<div>
-  <%= link_to "Back to properties", properties_path %>
-</div>
