--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
 <% content_for :title, "New booking" %>
-<%= render_nav title: "Нова резервация", back_url: property_path(@property) %>
+<%= render_nav title: "Нова резервация", back_url: params[:back_to] || property_path(@property) %>
 
 <%= render "form", booking: @booking %>
