chore: PWA initial

--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -16,7 +16,7 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "Holidays.",
-  "theme_color": "red",
-  "background_color": "red"
+  "description": "Holidays. An app to manage bookings",
+  "theme_color": "#0172ad",
+  "background_color": "#0172ad"
 }
