--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -18,5 +18,6 @@
   "scope": "/",
   "description": "Holidays. An app to manage bookings",
   "theme_color": "#0172ad",
-  "background_color": "#0172ad"
+  "background_color": "#0172ad",
+  "orientation": "portrait-primary"
 }
