--- a/app/views/layouts/bookings.html.erb
+++ b/app/views/layouts/bookings.html.erb
@@ -7,7 +7,7 @@
     <%= yield :head %>
   </head>
 
-  <body>
+  <body data-controller="bookings">
     <%= yield :nav %>
     <%= render "layouts/flash" %>
     <%= yield %>
