--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div>
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true %>
   </div>
 
   <div>
