--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -8,5 +8,5 @@
 <%= render "form", property: @property %>
 
 <div>
-  <%= button_to "Destroy this property", property_path(@property), class: "secondary", method: :delete, data: { turbo_confirm: "Are you sure?" } %>
+  <%#= button_to "Destroy this property", property_path(@property), class: "secondary", method: :delete, data: { turbo_confirm: "Are you sure?" } %>
 </div>
