--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,4 +1,4 @@
 <% content_for :title, "New property" %>
-<%= render_nav title: "New property", back_url: root_path %>
+<%= render_nav title: "New property" %>
 
 <%= render "form", property: @property %>
