chore: display app version

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -7,3 +7,7 @@
 
 <%= button_to_with_icon "New booking", new_property_booking_path(@property), "plus", method: :get %>
 <%= button_to "Bookings", property_bookings_path(@property), method: :get, class: "outline" %>
+
+<code class="version">
+  v<%= Holidays::Application.version %>
+</code>
