--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -4,7 +4,8 @@
     {
       "src": "/icon.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
     },
     {
       "src": "/icon.png",
@@ -19,5 +20,6 @@
   "description": "Holidays. An app to manage bookings",
   "theme_color": "#0172ad",
   "background_color": "#0172ad",
-  "orientation": "portrait-primary"
+  "orientation": "portrait-primary",
+  "short_name": "hdays"
 }
